--- a/Float.Api/Properties/launchSettings.json
+++ b/Float.Api/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "Float.Api": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchUrl": "Startup",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
