--- a/Float.Api/appsettings.json
+++ b/Float.Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MySqlConnection": "server=localhost;port=3306;database=float;user=root;password=1234;"
+  }
 }
