--- a/Float.Infrastracture.Persistence/Float.Infrastracture.Persistence.csproj
+++ b/Float.Infrastracture.Persistence/Float.Infrastracture.Persistence.csproj
@@ -5,13 +5,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Float.Application\Float.Application.csproj" />
+    <ProjectReference Include="..\Float.Domain\Float.Domain.csproj" />
   </ItemGroup>
 
 </Project>
