--- a/Float.Api/appsettings.json
+++ b/Float.Api/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySqlConnection": "server=localhost;port=3306;database=float;user=root;password=1234;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS; Database=float_db;Trusted_Connection=True;",
+    "IdentityConnection": "Server=localhost\\SQLEXPRESS; Database=float_identity_db;Trusted_Connection=True;"
   }
 }
