--- a/Float.Application/Float.Application.csproj
+++ b/Float.Application/Float.Application.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Context\" />
+    <Folder Include="Exceptions\" />
+    <Folder Include="Enum\" />
+    <Folder Include="Wrappers\" />
   </ItemGroup>
 
   <ItemGroup>
