- - deleted AccountService in Application Layer

--- a/Float.Application/Float.Application.csproj
+++ b/Float.Application/Float.Application.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <Folder Include="Exceptions\" />
     <Folder Include="Enum\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
   <ItemGroup>
