- - added AccountService in Infrastracture Identity layer

--- a/Float.Infrastracture.Identity/Float.Infrastracture.Identity.csproj
+++ b/Float.Infrastracture.Identity/Float.Infrastracture.Identity.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Float.Application\Float.Application.csproj" />
+  </ItemGroup>
+
 </Project>
