added JWT Token settings and added request and response classes

--- a/Float.Api/appsettings.json
+++ b/Float.Api/appsettings.json
@@ -10,5 +10,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS; Database=float_db;Trusted_Connection=True;",
     "IdentityConnection": "Server=localhost\\SQLEXPRESS; Database=float_identity_db;Trusted_Connection=True;"
+  },
+
+  "JWTSettings": {
+    "Key": "12345",
+    "Issuer": "IdentityCore",
+    "Audience": "Identity",
+    "ExpirationInSeconds": "60"
   }
 }
