--- a/Float.Api/Properties/launchSettings.json
+++ b/Float.Api/Properties/launchSettings.json
@@ -20,8 +20,8 @@
     "Float.Api": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "Startup",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:9024;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
