--- a/Float.Api/appsettings.json
+++ b/Float.Api/appsettings.json
@@ -1,12 +1,44 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "AllowedHosts": "*",
+  "Serilog": {
+    "Using": [],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Overried": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "C:\\Users\\prisma\\Documents\\GitHub\\Visual Studio\\Float.Api\\Float.Api Logs\\log.txt",
+          "outputTemplate": "{Timestamp} {Message}{NewLine:1}{Exception:1}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "C:\\Users\\prisma\\Documents\\GitHub\\Visual Studio\\Float.Api\\Float.Api Logs\\log.json",
+          "formatter": "Serilog.Formatting.Json.JsonFormatting, Serilog"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithProcessId",
+      "WithThreadId"
+    ],
+    "Properties": {
+      "ApplicationName": "Float.Api"
     }
   },
-  "AllowedHosts": "*",
+
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS; Database=float_db;Trusted_Connection=True;",
     "IdentityConnection": "Server=localhost\\SQLEXPRESS; Database=float_identity_db;Trusted_Connection=True;"
@@ -15,7 +47,7 @@
   "JWTSettings": {
     "Key": "12345",
     "Issuer": "IdentityCore",
-    "Audience": "Identity",
+    "Audience": "IdentityCoreUser",
     "ExpirationInSeconds": "60"
   }
 }
