--- a/Float.Api/appsettings.json
+++ b/Float.Api/appsettings.json
@@ -19,6 +19,13 @@
           "path": "C:\\Users\\prisma\\Documents\\GitHub\\Visual Studio\\Float.Api\\Float.Api Logs\\log.txt",
           "outputTemplate": "{Timestamp} {Message}{NewLine:1}{Exception:1}"
         }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "C:\\Users\\prisma\\Documents\\GitHub\\Visual Studio\\Float.Api\\Float.Api Logs\\log.json",
+          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
+        }
       }
       
     ],
