put logs in current directory

--- a/Float.Api/appsettings.json
+++ b/Float.Api/appsettings.json
@@ -16,14 +16,14 @@
       {
         "Name": "File",
         "Args": {
-          "path": "C:\\Users\\prisma\\Documents\\GitHub\\Visual Studio\\Float.Api\\Float.Api Logs\\log.txt",
+          "path": "Float.Api Logs\\log.txt",
           "outputTemplate": "{Timestamp} {Message}{NewLine:1}{Exception:1}"
         }
       },
       {
         "Name": "File",
         "Args": {
-          "path": "C:\\Users\\prisma\\Documents\\GitHub\\Visual Studio\\Float.Api\\Float.Api Logs\\log.json",
+          "path": "Float.Api Logs\\log.json",
           "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
         }
       }
